// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FailedInstancePanel primary button disabled without description 1`] = `
<DocumentFragment>
  <mock-genericpanel
    classname="failureInstancePanel"
    closebuttonarialabel="Close failure instance panel"
    hasclosebutton="true"
    headertext="some header"
    isopen="true"
  >
    <mock-styledtextfieldbase
      classname="observedFailureTextfield"
      data-automation-id="addFailedInstanceTextArea"
      label="Comment"
      multiline="true"
      placeholder="Comment"
      resizable="false"
      rows="8"
      value=""
    />
    <div>
      <mock-actionandcancelbuttonscomponent
        ishidden="false"
        primarybuttondataautomationid="primaryAddFailedInstanceButton"
        primarybuttondisabled="true"
        primarybuttontext="some confirm text"
      />
    </div>
  </mock-genericpanel>
</DocumentFragment>
`;

exports[`FailedInstancePanel renders 1`] = `
<DocumentFragment>
  <mock-genericpanel
    classname="failureInstancePanel"
    closebuttonarialabel="Close failure instance panel"
    hasclosebutton="true"
    headertext="some header"
    isopen="true"
  >
    <mock-styledtextfieldbase
      classname="observedFailureTextfield"
      data-automation-id="addFailedInstanceTextArea"
      label="Comment"
      multiline="true"
      placeholder="Comment"
      resizable="false"
      rows="8"
      value="some description"
    />
    <div>
      <mock-actionandcancelbuttonscomponent
        ishidden="false"
        primarybuttondataautomationid="primaryAddFailedInstanceButton"
        primarybuttondisabled="false"
        primarybuttontext="some confirm text"
      />
    </div>
  </mock-genericpanel>
</DocumentFragment>
`;
